--- a/index.html
+++ b/index.html
@@ -25,9 +25,11 @@
             </div>
             <button type="button" id="search-btn" class="btn btn-outline-info mb-2">Search</button>
         </div>
+        <!-- empty error  -->
         <div>
             <h1 id="error"></h1>
         </div>
+        <!-- go to home button  -->
         <div class="d-flex justify-content-center">
             <button id="home-button" onclick="location.reload()"
                 class="btn btn-outline-success mx-auto mb-2">Home</button>
